tdf#118166 writerfilter: no design mode if ole controls exist

I'm not sure why design mode wasn't automatically turned off
right from the start. But I don't want to do that now because
forms are becoming more prominent in Writer, and if design
mode is ALWAYS turned off for .docx files, then the workflow
will be different for new forms, since writer defaults to on.

Change-Id: I91c771f1ebd5e640da8067d38cb06076d8c50d5a